fixed styling to add more spacing between related products and outfits

--- a/public/styles.css
+++ b/public/styles.css
@@ -260,12 +260,14 @@ body {
 .card-info {
   margin-top: 2rem;
   text-align: center;
+  font-size: 1.5rem;
 }
 
 .addOutfit-btn {
   position: absolute;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   font-size: 10rem;
   text-align: center;
   background-color: transparent;
@@ -274,6 +276,10 @@ body {
   cursor: pointer;
   overflow: hidden;
   outline: none;
+}
+
+.outfits {
+  margin-top: 4rem;
 }
 
 .thumbnail {
